--- a/_posts/2024-01-01-2023.md
+++ b/_posts/2024-01-01-2023.md
@@ -7,9 +7,90 @@ author:     lyk
 header-img: img/post-bg-cook.jpg
 catalog: true
 tags:
-    - ctf
+    - 私
 ---
 
-## 前言
+## 线下赛
 
-1
+2022年首届数据安全大赛优胜奖——郑州
+
+2023年网鼎杯进决赛——杭州
+
+2023数字中国创新大赛网络数据安全赛道优胜奖——福州
+
+第十六届全国大学生信息安全竞赛创新实践能力赛华南赛区分区赛二等奖——桂林
+
+第七届蓝帽杯全国大学生网络安全技能大赛半决赛——贵州
+
+第七届蓝帽杯全国大学生网络安全技能大赛总决赛一等奖——北京
+
+国家级hvv——上海
+
+![微信图片_20240118215539](img/微信图片_20240118215539.jpg)
+
+## XCTF
+
+跟着S1uM4i有饭吃hhhh
+
+![2023SCTF](img/2023SCTF.jpg)
+
+![2023星CTF](img/2023星CTF.jpg)
+
+## EDUSRC
+
+挖了一个月，拿了个月榜前10
+
+浅浅嫖了几张证书
+
+![微信图片_20240118215248](img/微信图片_20240118215248.jpg)
+
+![微信图片_20240118215525](img/微信图片_20240118215525.jpg)
+
+![新疆交通职业技术学院](img/新疆交通职业技术学院.png)
+
+## 重拾滑板
+
+一会儿就重拾了基础的滑行
+
+解锁新技能——ollie
+
+1.1
+
+## 工作室招新
+
+南亭轰趴小团建
+
+2.25
+
+## 破纪录
+
+在杭州夜跑破了纪录，5km跑了20min，4分配哎，那天的天气真的很好，跑得贼爽
+
+4.12
+
+## CNVD
+
+大冤种几个rce合成了一张证书
+
+6.21
+
+## ISCC2023
+
+2023年第20届全国大学生信息安全与对抗技术竞赛
+
+个人挑战赛和无限擂台赛都是一等奖
+
+7.4
+
+## GF70周年校庆
+
+我的母校广州大学附属中学70周年校庆啦，还记得我刚上高一的时候，65周年校庆跟我生日是同一天！
+
+11.5
+
+## 献血凑整
+
+累计献成分血10次啦，一共献了4000ml的血小板哎
+
+12.4
+
