--- a/_posts/2022-03-05-java反序列化rce(1).md
+++ b/_posts/2022-03-05-java反序列化rce(1).md
@@ -430,7 +430,8 @@ public class App3 {
 熟悉ysoserial的小伙伴会发现，这其实就是一个ysoserial中的一个payload，而当我启动这个程序，并把这个payload对象动态代理成Remote，并注册到Registry注册中心后，注册中心就会被RCE弹出计算器。
 
 为什么会导致这样呢？其实我们不难猜测，既然触发了RCE，那么必然Registry注册中心执行了这段代码，而这段代码怎么从程序B到程序A的呢，这其中必然是registry.bind("pwn",remote)这个方法中的细节，而java对于对象数据的传输，一向都是通过java原生序列化的方式进行，我们可以尝试抓包看看。
-[![img](https://xzfile.aliyuncs.com/media/upload/picture/20200112103411-03f56baa-34e4-1.jpg)](https://xzfile.aliyuncs.com/media/upload/picture/20200112103411-03f56baa-34e4-1.jpg)
+
+![微信图片_20240305145754](/img/微信图片_20240305145754.png)
 
 可以清晰的看到，程序B发送了序列化的数据流给程序A，这印证了我前面的猜测。
 
