--- a/_posts/2022-03-05-java反序列化rce(1).md
+++ b/_posts/2022-03-05-java反序列化rce(1).md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      基于Java反序列化RCE
+title:      基于Java反序列化RCE(1)
 subtitle:   搞懂RMI、JRMP、JNDI
 date:       2022-03-05
 author:     lyk
