--- a/_posts/2022-03-06-java反序列化rce(2).md
+++ b/_posts/2022-03-06-java反序列化rce(2).md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      基于Java反序列化RCE
+title:      基于Java反序列化RCE(2)
 subtitle:   搞懂RMI、JRMP、JNDI-终结篇
 date:       2022-03-06
 author:     lyk
