--- a/_posts/2022-03-06-java反序列化rce(2).md
+++ b/_posts/2022-03-06-java反序列化rce(2).md
@@ -10,7 +10,7 @@ tags:
     - java
 ---
 
-## 0x01 前言
+### 0x01 前言
 
 前段时间，发了一篇文章[《基于Java反序列化RCE - 搞懂RMI、JRMP、JNDI》](https://xz.aliyun.com/t/7079)，以概念和例子，粗略的讲解了什么是RMI，什么是JRMP、以及什么是JNDI，本来，我的初衷是为了照顾初学者，还有没多少Java基础的学习者，让他们能初步了解RMI\JRMP\JNDI，而不被很多讲得不清不楚的文章搞得迷迷糊糊，从而浪费大量的时间。
 
@@ -28,7 +28,7 @@ tags:
 4. 从jdk8u121开始，RMI反序列化远程Reference对象而触发加载的远程代码默认不被信任，RMI反序列化远程Reference对象而触发加载远程代码的攻击方式开始失效。
 5. 从jdk8u191开始，LDAP使用Reference加载远程代码默认不被信任，LDAP使用Reference加载远程代码攻击方式开始失效，需要通过javaSerializedData返回序列化gadget方式（反序列化或后反序列化触发）实现攻击。
 
-## 0x02 RMI简述
+### 0x02 RMI简述
 
 最早的最早，从分布式概念出现以后，工程师们，制造了一种，基于Java语言的远程方法调用的东西，它叫RMI（Remote Method Invocation），我们使用Java代码，可以利用这种技术，去跨越JVM，调用另一个JVM的类方法。
 
@@ -149,11 +149,11 @@ helloService.sayHello()
 
 ，stub对象，存储了如何跟服务端联系的信息，以及封装了RMI的通讯实现细节，对开发者完全透明。
 
-## 0x03 从JDK不同版本进行源码分析
+### 0x03 从JDK不同版本进行源码分析
 
-### 一、jdk版本 < jdk8u121
+#### 一、jdk版本 < jdk8u121
 
-#### RMI攻击主要针对的目标
+##### RMI攻击主要针对的目标
 
 接下来，开始从小于jdk8u121版本的jdk8u112版本进行分析。
 
@@ -461,7 +461,7 @@ sun.rmi.server.UnicastRef#unmarshalValue
 
 没错，反序列化RCE下gadget的确很重要，若是没有gadget的依赖，那么基本就是束手无决了，像前面所说的，三个目标的攻击，我们都可以利用gadget，构造恶意的序列化数据达到反序列化攻击RCE。
 
-#### RMI反序列化远程Reference对象加载远程字节码
+##### RMI反序列化远程Reference对象加载远程字节码
 
 但是这里就要讲讲Reference对象，在特殊情况下，可以不需要gadget依赖的存在，亦或者说Reference也是一个gadget。
 
@@ -606,9 +606,9 @@ clas = helper.loadClass(factoryName, codebase);
 
 原理上来说，这属于一种后序列化的触发gadget，因为对于RMI来说，Reference对象也是需要反序列化远程RMI注册中心返回的序列化数据而构造出来的，只是说在其反序列化构造期间，它并没有直接触发RCE，而是在其被反序列化后，一系列对Reference对象方法的执行而触发，我们可以称之为“后反序列化”吧！
 
-### 二、jdk版本 = jdk8u121
+#### 二、jdk版本 = jdk8u121
 
-#### 反序列化白名单机制
+##### 反序列化白名单机制
 
 在jdk8u121的时候，加入了反序列化白名单的机制，导致了几乎全部gadget都不能被反序列化了，究竟有哪些类被列入白名单呢？我们一探究竟
 
@@ -1010,7 +1010,7 @@ public Lease dirty(ObjID[] var1, long var2, Lease var4) throws RemoteException {
 
 不过，这里可以总结一下了：ysoserial的JRMPClient payload是为了绕过jdk8u121后出现的白名单限制。
 
-#### RMI反序列化远程Reference对象加载远程字节码不被信任
+##### RMI反序列化远程Reference对象加载远程字节码不被信任
 
 说完需要gadget依赖的打法限制问题了，那么我们再来看看前面所讲的JNDI攻击客户端在jdk8u121+中的问题
 
@@ -1030,7 +1030,7 @@ com.sun.jndi.rmi.object.trustURLCodebase
 
 是否为true，而其在121版本及后，默认为false，也就是说，在jdk8u121之后，我们就没办法通过rmi协议实现JNDI注入打客户端了。
 
-#### LDAP通过Reference加载远程代码
+##### LDAP通过Reference加载远程代码
 
 那么，有没有其他办法绕过远程代码加载的保护机制呢？
 
@@ -1185,9 +1185,9 @@ private static Reference decodeReference(Attributes var0, String[] var1) throws 
 
 在得到Reference对象后，最后执行的代码和RMI协议实现JNDI注入时的代码是一致的，都是通过Reference对象的数据，加载到远程字节码并且执行。
 
-### 三、jdk版本 > jdk8u191
+#### 三、jdk版本 > jdk8u191
 
-#### LDAP通过Reference加载远程代码不被信任
+##### LDAP通过Reference加载远程代码不被信任
 
 为什么继续讲jdk8u191呢，因为在jdk8u191之后，加入了对LDAP Reference加载远程代码的信任机制，LDAP加载远程代码攻击的方式开始失效，也就是系统变量
 
@@ -1199,7 +1199,7 @@ com.sun.jndi.ldap.object.trustURLCodebase
 
 默认为false（CVE-2018-3149）
 
-#### LDAP通过javaSerializedData返回序列化gadget方式（反序列化或后反序列化触发）实现攻击
+##### LDAP通过javaSerializedData返回序列化gadget方式（反序列化或后反序列化触发）实现攻击
 
 既然不能去Reference加载远程代码执行了，那么，是不是能不用Reference去加载呢，或者还有其他什么样的方式实现RCE呢？
 
@@ -1434,15 +1434,15 @@ public static Object
 
 总结：jdk8u191后，ldap Reference加载远程代码的攻击方式不能使用，需要通过javaSerializedData返回序列化gadget方式实现，而序列化gadget可以使用tomcat中的gadget “org.apache.naming.factory.BeanFactory”，在其后反序列化中触发RCE。
 
-## 0x04 缺少的RMI后反序列化
+### 0x04 缺少的RMI后反序列化
 
 实际上，在jdk8u121的RMI反序列化Reference加载远程代码保护机制出来之后，实际上和LDAP通过后反序列化Reference触发的tomcat gadget一样，RMI也可以通过反序列化Reference触发的tomcat gadget实现RCE，这里不做对其的讲解，一个原因是jdk8u121至jdk8u191之间的版本能通过LDAP Reference加载远程代码造成RCE，另一个原因是在jdk8u191之后的版本亦能通过后反序列化Reference触发的tomcat gadget造成RCE，所以说，根本没有必要在费口水。
 
-## 0x05 JRMP Gadget还有用吗？
+### 0x05 JRMP Gadget还有用吗？
 
 很多人以为天天讲RMI攻击什么的，觉得很鸡肋，其实并不然，其中涉及到的很多知识，在其他地方我们完全能用上，就比如，我们使用RMI和LDAP协议的JNDI去攻击客户端，以及我前段时间讲的Shiro文章[《Apache Shiro源码浅析之从远古洞到最新PaddingOracle CBC》](https://xz.aliyun.com/t/7207)，完全可以利用JRMPClient的gadget payload去加快Padding Oracle CBC攻击的速度等等…
 
-## 0x06 参考
+### 0x06 参考
 
 [如何绕过高版本 JDK 的限制进行 JNDI 注入利用](https://paper.seebug.org/942/)
 
