--- a/_posts/2022-03-08-高版本JNDI绕过.md
+++ b/_posts/2022-03-08-高版本JNDI绕过.md
@@ -10,7 +10,7 @@ tags:
     - java
 ---
 
-## 0x00 前言
+### 0x00 前言
 
 高版本JDK在RMI和LDAP的`trustURLCodebase`都做了限制，从默认允许远程加载ObjectFactory变成了不允许。RMI是在6u132, 7u122, 8u113版本开始做了限制，LDAP是 11.0.1, 8u191, 7u201, 6u211版本开始做了限制。
 
@@ -20,7 +20,7 @@ tags:
 
 虽然这三种方式比较常用，但还是难免会遇到特殊情况。比如系统使用的是 Tomcat7（没有ELProcessor），或是没有 groovy 依赖，又或是没有本地可用的反序列化 gadget，还有可能连 Tomcat 都没有（无法使用 BeanFactory），一般这时候有些人可能就放弃了，所以本文主要探讨一下我在遇到这种情况后研究发现的几个利用方法。
 
-## 0x01 基于BeanFactory
+### 0x01 基于BeanFactory
 
 我首先简要讲一下`org.apache.naming.factory.BeanFactory`的绕过原理。
 
@@ -59,7 +59,7 @@ new javax.el.ELProcessor().eval("\"\".getClass().forName(\"javax.script.ScriptEn
 - 有public修饰的无参构造方法
 - public修饰的只有一个String.class类型参数的方法，且该方法可以造成漏洞
 
-### MLet
+#### MLet
 
 根据这个条件我找到了`javax.management.loading.MLet`，是 JDK 自带的。
 
@@ -95,7 +95,7 @@ private static ResourceRef tomcatMLet() {
 
 [![image-20220112210141679.png](https://storage.tttang.com/media/attachment/2022/01/13/4951e2cc-2b83-436b-88e4-e3bb5adbecd5.png)](https://storage.tttang.com/media/attachment/2022/01/13/4951e2cc-2b83-436b-88e4-e3bb5adbecd5.png)
 
-### GroovyClassLoader
+#### GroovyClassLoader
 
 和 MLet 基本原理一样，不同于MLet的是GroovyClassLoader可以RCE，不过因为 Groovy 已经有一个 `groovy.lang.GroovyShell`可以用了，所以这个类并不能体现出价值。
 
@@ -119,7 +119,7 @@ private static ResourceRef tomcatGroovyClassLoader() {
 class Person{}
 ```
 
-### SnakeYaml
+#### SnakeYaml
 
 在我以往所看过的源码中依赖库使用SnakeYaml比Groovy更常见，`new org.yaml.snakeyaml.Yaml().load(String)`也刚好符合条件，所以还是很有价值的。
 
@@ -140,7 +140,7 @@ private static ResourceRef tomcat_snakeyaml(){
 
 [![image-20220112213733959.png](https://storage.tttang.com/media/attachment/2022/01/13/6cf47354-9e3d-4357-ae7e-26183552334e.png)](https://storage.tttang.com/media/attachment/2022/01/13/6cf47354-9e3d-4357-ae7e-26183552334e.png)
 
-### XStream
+#### XStream
 
 `new com.thoughtworks.xstream.XStream().fromXML(String)`同样符合条件。
 
@@ -194,7 +194,7 @@ private static ResourceRef tomcat_xstream(){
 
 [![image-20220112214028813.png](https://storage.tttang.com/media/attachment/2022/01/13/3dba1802-4f67-47f3-b9c2-c1b45ea0cc39.png)](https://storage.tttang.com/media/attachment/2022/01/13/3dba1802-4f67-47f3-b9c2-c1b45ea0cc39.png)
 
-### MVEL
+#### MVEL
 
 xstream、snakeyaml 这种属于入口就符合gadget条件，而MVEL的入口`org.mvel2.MVEL#eval(String)`因为无参构造方法是private修饰的，所以不符合条件。
 
@@ -235,7 +235,7 @@ private static ResourceRef tomcat_MVEL(){
 
 [![image-20220112225050428.png](https://storage.tttang.com/media/attachment/2022/01/13/47a7908c-ca0a-46d5-9ebd-c1253e4aa827.png)](https://storage.tttang.com/media/attachment/2022/01/13/47a7908c-ca0a-46d5-9ebd-c1253e4aa827.png)
 
-### NativeLibLoader
+#### NativeLibLoader
 
 `com.sun.glass.utils.NativeLibLoader`是JDK的类，它有一个`loadLibrary(String)`方法。
 
@@ -255,7 +255,7 @@ private static ResourceRef tomcat_loadLibrary(){
 
 [![image-20220113000634617.png](https://storage.tttang.com/media/attachment/2022/01/13/da1b2d49-eff2-4a70-ae25-e3957c133842.png)](https://storage.tttang.com/media/attachment/2022/01/13/da1b2d49-eff2-4a70-ae25-e3957c133842.png)
 
-## 0x02 XXE & RCE
+### 0x02 XXE & RCE
 
 我通过搜索所有实现`javax.naming.spi.ObjectFactory`接口的类，然后挨个查看代码，其中发现了一个Tomcat的工厂类`org.apache.catalina.users.MemoryUserDatabaseFactory`可能会存在漏洞。
 
@@ -269,13 +269,13 @@ private static ResourceRef tomcat_loadLibrary(){
 
 [![image-20220113184944685.png](https://storage.tttang.com/media/attachment/2022/01/13/d221db7e-ec69-443b-bfb3-e5a1b40f674c.png)](https://storage.tttang.com/media/attachment/2022/01/13/d221db7e-ec69-443b-bfb3-e5a1b40f674c.png)
 
-### XXE
+#### XXE
 
 它会根据pathname去发起本地或者远程文件访问，并使用 commons-digester 解析返回的 XML 内容，所以这里可以 XXE。
 
 [![image-20220113185434444.png](https://storage.tttang.com/media/attachment/2022/01/13/05016f3f-131e-49b2-b61c-2d7f023f8dad.png)](https://storage.tttang.com/media/attachment/2022/01/13/05016f3f-131e-49b2-b61c-2d7f023f8dad.png)
 
-### RCE
+#### RCE
 
 前面在解析XML的时候有这样一段代码
 
@@ -358,7 +358,7 @@ private static ResourceRef tomcatMkdirLast() {
 
 写文件的原理摸清楚了就可以开始准备RCE，RCE的方法有两种，分别是覆盖 tomcat-users.xml 和写 webshell 。
 
-#### 创建Tomcat管理员
+##### 创建Tomcat管理员
 
 我首先在本地启动了一个8888端口，并存放了一个 `conf/tomcat-users.xml` 文件。
 
@@ -384,7 +384,7 @@ private static ResourceRef tomcatManagerAdd() {
 
 文件覆盖成功后，就可以用新账号密码去登录 Tomcat 后台了。
 
-#### 写 Webshell
+##### 写 Webshell
 
 如果 Tomcat 后台访问不了，还可以尝试写 webshell。
 
@@ -414,11 +414,11 @@ private static ResourceRef tomcatWriteFile() {
 
 [![image-20220113204841458.png](https://storage.tttang.com/media/attachment/2022/01/13/f6605fc7-1d90-4bea-9fe0-52af4edec30f.png)](https://storage.tttang.com/media/attachment/2022/01/13/f6605fc7-1d90-4bea-9fe0-52af4edec30f.png)
 
-## 0x03 JDBC RCE
+### 0x03 JDBC RCE
 
 ObjectFactory 的实现类里有好几个类都是用来实例化数据源的，如果能够触发数据库连接，那就可以用 jdbc 来 RCE。参考[《Make JDBC Attacks Brilliant Again》](https://conference.hitb.org/hitbsecconf2021sin/sessions/make-jdbc-attacks-brilliant-again/)根据classpath下有哪些可用的jdbc驱动构造出对应的 payload。
 
-### dbcp
+#### dbcp
 
 dbcp分为dbcp1和dbcp2，同时又分为 commons-dbcp 和 Tomcat 自带的 dbcp。
 
@@ -468,7 +468,7 @@ private static Reference dbcpByFactory(String factory){
 
 [![image-20220113220858430.png](https://storage.tttang.com/media/attachment/2022/01/13/c89d9577-9178-4033-8e15-706de908c11c.png)](https://storage.tttang.com/media/attachment/2022/01/13/c89d9577-9178-4033-8e15-706de908c11c.png)
 
-### tomcat-jdbc
+#### tomcat-jdbc
 
 如果遇到 dbcp 使用不了时，可以使用 tomcat-jdbc.jar 的 `org.apache.tomcat.jdbc.pool.DataSourceFactory`
 
@@ -493,7 +493,7 @@ private static Reference dbcpByFactory(String factory){
 
 [![image-20220113221900352.png](https://storage.tttang.com/media/attachment/2022/01/13/fe3ba3a1-3eba-4b3f-a39a-838809d518e8.png)](https://storage.tttang.com/media/attachment/2022/01/13/fe3ba3a1-3eba-4b3f-a39a-838809d518e8.png)
 
-### druid
+#### druid
 
 druid可以参考[《JNDI jdk高版本绕过—— Druid》](https://xz.aliyun.com/t/10656)，和dbcp原理一样。
 
@@ -519,7 +519,7 @@ private static Reference druid(){
 
 [![image-20220113222235995.png](https://storage.tttang.com/media/attachment/2022/01/13/7b5ac3da-60d9-46fe-a621-b6539a7f4667.png)](https://storage.tttang.com/media/attachment/2022/01/13/7b5ac3da-60d9-46fe-a621-b6539a7f4667.png)
 
-## 0x04 Deserialize
+### 0x04 Deserialize
 
 看 ObjectFactory 时发现有几个类有反序列化的地方，不过没有意义，JNDI本来就能反序列化，所以这里不再做演示。
 
@@ -548,7 +548,7 @@ ref.add(new StringRefAddr("type", "java.lang.AutoCloseable"));
 ref.add(new StringRefAddr("url", "http://127.0.0.1:6666/"));
 ```
 
-## 0x05 基于服务端返回数据流的反序列化RCE
+### 0x05 基于服务端返回数据流的反序列化RCE
 
 通过ldap/rmi指定一个恶意FactoryObject下载服务器，让目标访问并下载一段恶意序列化数据，在目标反序列化时触发Java 原生反序列化漏洞。
 
@@ -713,7 +713,7 @@ ref.add(new StringRefAddr("url", "http://127.0.0.1:6666/"));
 
 ![image-20240308165829606](/img/image-20240308165829606.png)
 
-## 0x06 参考
+### 0x06 参考
 
 [java高版本下各种JNDI Bypass方法复现 | V2AS - 问路](https://www.v2as.com/article/7ce65bf2-5da5-4b68-bc61-af5fbddf9f8d)
 
