--- a/_posts/2022-03-08-高版本JNDI绕过.md
+++ b/_posts/2022-03-08-高版本JNDI绕过.md
@@ -358,7 +358,7 @@ private static ResourceRef tomcatMkdirLast() {
 
 写文件的原理摸清楚了就可以开始准备RCE，RCE的方法有两种，分别是覆盖 tomcat-users.xml 和写 webshell 。
 
-###### 创建Tomcat管理员
+###### (1)创建Tomcat管理员
 
 我首先在本地启动了一个8888端口，并存放了一个 `conf/tomcat-users.xml` 文件。
 
@@ -384,7 +384,7 @@ private static ResourceRef tomcatManagerAdd() {
 
 文件覆盖成功后，就可以用新账号密码去登录 Tomcat 后台了。
 
-###### 写 Webshell
+###### (2)写 Webshell
 
 如果 Tomcat 后台访问不了，还可以尝试写 webshell。
 
