--- a/_posts/2024-03-18-DubheCTF2024.md
+++ b/_posts/2024-03-18-DubheCTF2024.md
@@ -143,7 +143,7 @@ http://1.95.13.243:49319/sub?target=clash&url=script:pref.yml&token=189069462103
 
 根据提示开始脑洞，githack dump 源码
 
-![image-20240319163532801](/img/image-20240319163532801.png)
+![image-20240319163532801](\img\image-20240319163532801.png)
 
 ![image-20240319163609215](/img/image-20240319163609215.png)
 
