--- a/_posts/2023-08-04-华夏erp代码审计.md
+++ b/_posts/2023-08-04-华夏erp代码审计.md
@@ -42,11 +42,7 @@ xss:
 - springboot + mybatis
 - 看pom.xml
 
-
-
-![image-20230804155614395](https://raw.githubusercontent.com/hmt38/abcd/main/image-20230804155614395.png)
-
-
+![image-20250304082726580](..\img\image-20250304082726580.png)
 
 该fastjson版本存在漏洞
 
@@ -55,9 +51,7 @@ xss:
 关注filter
 （为什么要先看，因为可能里面写了一些全局的过滤，但是如果单纯看具体地方可能会有些意外的过滤没有在白盒代码中被察觉）
 
-
-
-![image-20230804155728386](https://raw.githubusercontent.com/hmt38/abcd/main/image-20230804155728386.png)
+![image-20250304082812246](..\img\image-20250304082812246.png)
 
 
 
